--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -20,8 +20,8 @@
         <td><%= link_to project, project %></td>
         <td><%= render partial: 'semesters/inline_list', locals: {semesters: project.semesters} %></td>
         <td><%= render partial: 'fields/inline_list', locals: {fields: project.fields} %></td>
-        <td></td>
-        <td></td>
+        <td><%= render partial: 'teaching_modules/inline_list', locals: {teaching_modules: project.teaching_modules} %></td>
+        <td><%= render partial: 'users/inline_list', locals: {users: project.users} %></td>
       </tr>
     <% end %>
   </tbody>
