--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -3,7 +3,8 @@
     <%= f.input :label %>
     <%= f.input :description %>
     <%= f.input :fields, as: :check_boxes, label: 'Champs', collection: Field.not_root %>
-    <%= f.input :semesters, as: :check_boxes, labe: 'Semestres' %>
+    <%= f.input :semesters, as: :check_boxes, label: 'Semestres' %>
+    <%= f.input :users, as: :check_boxes, label: 'Personnes'  %>
   <% end %>
   <%= f.actions %>
 <% end %>
