projects over semesters

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -20,3 +20,19 @@ ul
 .list-inline li
   padding-bottom: 10px
   padding-left: 0
+
+.projects-timeline
+  margin-top: 50px
+  table
+    width: 100%
+    th
+      text-align: center
+    td
+      width: 20%
+      border-spacing: 10px
+      &.active span
+        display: block
+        width: 100%
+        height: 30px
+        margin-bottom: 5px
+        background: black
