--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -23,11 +23,11 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Label</th>
+      <th style="min-width: 140px">Label</th>
       <th>Semestres</th>
       <th>Champs</th>
-      <th>Modules</th>
       <th>Personnes</th>
+      <th>Modules</th>
     </tr>
   </thead>
 
@@ -37,8 +37,8 @@
         <td><%= link_to project, project %></td>
         <td><%= render partial: 'semesters/inline_list', locals: {semesters: project.semesters} %></td>
         <td><%= render partial: 'fields/inline_list', locals: {fields: project.fields} %></td>
-        <td><%= render partial: 'teaching_modules/inline_list', locals: {teaching_modules: project.teaching_modules} %></td>
         <td><%= render partial: 'users/inline_list', locals: {users: project.users} %></td>
+        <td><%= render partial: 'teaching_modules/inline_list', locals: {teaching_modules: project.teaching_modules} %></td>
       </tr>
     <% end %>
   </tbody>
