--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,13 +6,12 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Nom</th>
+      <th style="min-width: 200px">Nom</th>
       <th>Responsable des modules</th>
       <th>Champs</th>
       <th>Projets</th>
     </tr>
   </thead>
-
   <tbody>
     <% @users.each do |user| %>
       <tr>
