--- a/app/views/involvements/show.html.erb
+++ b/app/views/involvements/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Project:</strong>
-  <%= @involvement.project_id %>
+  <strong>Teaching module</strong>
+  <%= @involvement.teaching_module %>
 </p>
 
 <p>
   <strong>User:</strong>
-  <%= @involvement.user_id %>
+  <%= @involvement.user %>
 </p>
 
 <p>
