--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,7 +5,7 @@
     <%= f.input :hours %>
     <%= f.input :tenured, label: 'Titulaire' %>
     <%= f.input :teaching_modules, as: :check_boxes, label: 'Responsable des modules' %>
-    <%= f.input :projects, as: :check_boxes, label: 'Projets' %>
+    <%= f.input :projects, as: :check_boxes, label: 'Impliqué(e) dans les projets' %>
     <%= f.input :fields, as: :check_boxes, collection: Field.not_root, label: 'Champs' %>
   <% end %>
   <%= f.actions %>
