--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,8 @@
       <th>Responsable des modules</th>
       <th>Champs</th>
       <th>Projets</th>
+      <th>Heures planifiées</th>
+      <th>Service</th>
     </tr>
   </thead>
   <tbody>
@@ -17,6 +19,8 @@
         <td><%= render partial: 'teaching_modules/inline_list', locals: {teaching_modules: user.teaching_modules} %></td>
         <td><%= render partial: 'fields/inline_list', locals: {fields: user.fields} %></td>
         <td><%= render partial: 'projects/inline_list', locals: {projects: user.projects} %></td>
+        <td><%= user.hours_planned %></td>
+        <td><%= user.hours %></td>
       </tr>
     <% end %>
   </tbody>
