--- a/app/views/involvements/_form.html.erb
+++ b/app/views/involvements/_form.html.erb
@@ -1,29 +1,9 @@
-<%= form_for(@involvement) do |f| %>
-  <% if @involvement.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@involvement.errors.count, "error") %> prohibited this involvement from being saved:</h2>
-
-      <ul>
-      <% @involvement.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
+<%= semantic_form_for @involvement do |f| %>
+  <%= f.inputs do %>
+    <%= f.input :teaching_module %>
+    <%= f.input :user %>
+    <%= f.input :description %>
+    <%= f.input :hours %>
   <% end %>
-
-  <div class="field">
-    <%= f.label :project_id %><br>
-    <%= f.number_field :project_id %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :hours %><br>
-    <%= f.number_field :hours %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.actions %>
 <% end %>
