--- a/app/views/projects/_table.html.erb
+++ b/app/views/projects/_table.html.erb
@@ -4,7 +4,8 @@
       <th style="min-width: 200px">Label</th>
       <th>Semestres</th>
       <th>Champs</th>
-      <th>Personnes</th>
+      <th>Responsable</th>
+      <th>Personnes impliquées</th>
       <th>Modules</th>
     </tr>
   </thead>
@@ -14,6 +15,7 @@
       <tr>
         <td><%= link_to project, project %></td>
         <td><%= render partial: 'semesters/inline_list', locals: {semesters: project.semesters} %></td>
+        <td><%= link_to project.user, project.user unless project.user.nil? %></td>
         <td><%= render partial: 'fields/inline_list', locals: {fields: project.fields} %></td>
         <td><%= render partial: 'users/inline_list', locals: {users: project.users} %></td>
         <td><%= render partial: 'teaching_modules/inline_list', locals: {teaching_modules: project.teaching_modules} %></td>
