--- a/app/views/teaching_modules/_table.html.erb
+++ b/app/views/teaching_modules/_table.html.erb
@@ -4,6 +4,8 @@
       <th>Nom</th>
       <th>En bref</th>
       <th>Responsable</th>
+      <th>Heures planifiées</th>
+      <th>Heures prévues</th>
       <th>Champs</th>
       <th>Projets</th>
       <th>Mots-clés</th>
@@ -20,6 +22,8 @@
           <%= teaching_module.hours %> heures
         </td>
         <td><%= link_to teaching_module.user, teaching_module.user unless teaching_module.user.nil? %></td>
+        <td><%= teaching_module.hours_planned %></td>
+        <td><%= teaching_module.hours %></td>
         <td><%= render partial: 'fields/inline_list', locals: {fields: teaching_module.fields} %></td>
         <td><%= render partial: 'projects/inline_list', locals: {projects: teaching_module.projects} %></td>
         <td><small><%= teaching_module.keywords.map{|k|k.label}.join(', ') %></small></td>
