--- a/app/views/involvements/_form.html.erb
+++ b/app/views/involvements/_form.html.erb
@@ -3,7 +3,9 @@
     <%= f.input :teaching_module %>
     <%= f.input :user %>
     <%= f.input :description %>
-    <%= f.input :hours %>
+    <%= f.input :hours_cm %>
+    <%= f.input :hours_td %>
+    <%= f.input :hours_tp %>
   <% end %>
   <%= f.actions %>
 <% end %>
