--- a/app/views/involvements/_table.html.erb
+++ b/app/views/involvements/_table.html.erb
@@ -3,7 +3,8 @@
     <tr>
       <th>Personne</th>
       <th>Modules</th>
-      <th>Heures</th>
+      <th>Heures étudiant</th>
+      <th>Heures enseignant</th>
       <th>Edit</th>
     </tr>
   </thead>
@@ -12,7 +13,8 @@
     <tr>
       <td><%= link_to involvement.user, involvement.user %></td>
       <td><%= link_to involvement.teaching_module, involvement.teaching_module %></td>
-      <td><%= involvement.hours %></td>
+      <td><%= involvement.student_hours %></td>
+      <td><%= involvement.teacher_hours %></td>
       <td><%= link_to 'Edit', edit_involvement_path(involvement), class: 'btn btn-primary btn-xs' %></td>
     </tr>
   <% end %>
