--- a/app/views/teaching_modules/_show.html.erb
+++ b/app/views/teaching_modules/_show.html.erb
@@ -33,8 +33,8 @@
 <%= render partial: 'keywords/inline_list', locals: {keywords: @teaching_module.keywords} %>
 
 <h2>Heures</h2>
-<p><%= @teaching_module.hours_planned %>h planifiées / <%= @teaching_module.hours %>h prévues au PPN</p>
-<%= link_to 'Ajouter une personne', new_involvement_path(teaching_module_id: @teaching_module.id) %>
+<p><%= @teaching_module.student_hours %>h étudiant / <%= @teaching_module.hours %>h prévues au PPN</p>
+<%= link_to 'Planifier une personne', new_involvement_path(teaching_module_id: @teaching_module.id) %>
 <%= render partial: 'involvements/table', locals: {involvements: @teaching_module.involvements} %>
 
 <h2>Champs</h2>
