--- a/app/views/teaching_modules/_table.html.erb
+++ b/app/views/teaching_modules/_table.html.erb
@@ -4,8 +4,9 @@
       <th>Nom</th>
       <th>En bref</th>
       <th>Responsable</th>
-      <th>Heures planifiées</th>
-      <th>Heures prévues</th>
+      <th>Heures étudiant</th>
+      <th>Heures enseignant</th>
+      <th>Heures PPN</th>
       <th>Champs</th>
       <th>Projets</th>
       <th>Mots-clés</th>
@@ -22,7 +23,8 @@
           <%= teaching_module.hours %> heures
         </td>
         <td><%= link_to teaching_module.user, teaching_module.user unless teaching_module.user.nil? %></td>
-        <td><%= teaching_module.hours_planned %></td>
+        <td><%= teaching_module.student_hours %></td>
+        <td><%= teaching_module.teacher_hours %></td>
         <td><%= teaching_module.hours %></td>
         <td><%= render partial: 'fields/inline_list', locals: {fields: teaching_module.fields} %></td>
         <td><%= render partial: 'projects/inline_list', locals: {projects: teaching_module.projects} %></td>
