--- a/app/views/teaching_modules/index.html.erb
+++ b/app/views/teaching_modules/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
 <h1><%= @teaching_modules.count %> modules</h1>
+<p><%= @student_hours %> heures étudiants, <%= @teacher_hours %> heures enseignant</p>
 
 <%= render partial: 'table', locals: {teaching_modules: @teaching_modules} %>
