--- a/app/views/semesters/show.html.erb
+++ b/app/views/semesters/show.html.erb
@@ -5,7 +5,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <%= pie_chart @semester.teaching_modules.group(:teaching_category).sum(:hours) %>
+    <%#= pie_chart @semester.teaching_modules.group(:teaching_category).sum(:hours) %>
     <p>Heures par catégorie</p>
   </div>
 </div>
