--- a/app/views/involvements/edit.html.erb
+++ b/app/views/involvements/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Modifier une planification</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @involvement %> |
-<%= link_to 'Back', involvements_path %>
+<br/>
+<%= link_to 'Supprimer cette planification', involvement_path(@involvement), method: :delete, data: {confirm: "Sûr?"}  %>
+<br/>
