hours in summary

--- a/app/views/teaching_modules/summary.html.erb
+++ b/app/views/teaching_modules/summary.html.erb
@@ -25,7 +25,7 @@
         </td>
         <td><%= teaching_module.student_hours %></td>
         <td><%= teaching_module.hours %></td>
-        <td class="<%= teaching_module.student_hours_delta_warning ? 'hours-warning' : '' %>"><%= teaching_module.student_hours_delta %> %</td>
+        <td class="<%= teaching_module.student_hours_delta_warning ? 'hours-warning' : '' %>"><%= teaching_module.student_hours_delta.round(2) %> %</td>
       </tr>
     <% end %>
   </tbody>
