hours in summary

--- a/app/views/involvements/_form.html.erb
+++ b/app/views/involvements/_form.html.erb
@@ -3,6 +3,7 @@
     <%= f.input :teaching_module %>
     <%= f.input :user %>
     <%= f.input :description %>
+    <p>Toutes les heures sont en heures étudiants</p>
     <%= f.input :hours_cm %>
     <%= f.input :hours_td %>
     <%= f.input :hours_tp %>
