--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @users.count %> personnes</h1>
+<%= link_to 'Recapitulatif des heures', users_summary_path %><br/>
 <%= link_to 'Nouvelle personne', new_user_path %>
 
 <table class="table table-hover">
