--- a/app/views/teaching_modules/summary.html.erb
+++ b/app/views/teaching_modules/summary.html.erb
@@ -20,6 +20,7 @@
             CM <%= involvement.hours_cm %>
             TD <%= involvement.hours_td %>
             TP <%= involvement.hours_tp %>
+            (<%= involvement.description %>)
             <br/>
           <% end %>
         </td>
