users show hours first

--- a/app/views/competencies/edit.html.erb
+++ b/app/views/competencies/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @competency %> |
-<%= link_to 'Back', competencies_path %>
+<%= link_to 'Show', @competency %>
