--- a/app/views/involvements/show.html.erb
+++ b/app/views/involvements/show.html.erb
@@ -4,5 +4,4 @@
 <p>CM: <%= @involvement.hours_cm %>, TD: <%= @involvement.hours_td %>, TP: <%= @involvement.hours_tp %></p>
 <p>Heures étudiant: <%= @involvement.student_hours %>, heures enseignant: <%= @involvement.teacher_hours %></p>
 
-<%= link_to 'Edit', edit_involvement_path(@involvement) %> |
-<%= link_to 'Back', involvements_path %>
+<%= link_to 'Edit', edit_involvement_path(@involvement) %>
