--- a/app/views/semesters/edit.html.erb
+++ b/app/views/semesters/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @semester %> |
-<%= link_to 'Back', semesters_path %>
+<%= link_to 'Show', @semester %>
