--- a/app/views/teaching_categories/edit.html.erb
+++ b/app/views/teaching_categories/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @teaching_category %> |
-<%= link_to 'Back', teaching_categories_path %>
+<%= link_to 'Show', @teaching_category %>
