--- a/app/views/teaching_units/edit.html.erb
+++ b/app/views/teaching_units/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @teaching_unit %> |
-<%= link_to 'Back', teaching_units_path %>
+<%= link_to 'Show', @teaching_unit %>
