--- a/app/views/competencies/show.html.erb
+++ b/app/views/competencies/show.html.erb
@@ -10,5 +10,4 @@
   <%= @competency.teaching_module_id %>
 </p>
 
-<%= link_to 'Edit', edit_competency_path(@competency) %> |
-<%= link_to 'Back', competencies_path %>
+<%= link_to 'Edit', edit_competency_path(@competency) %>
