--- a/app/views/teaching_subjects/edit.html.erb
+++ b/app/views/teaching_subjects/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @teaching_subject %> |
-<%= link_to 'Back', teaching_subjects_path %>
+<%= link_to 'Show', @teaching_subject %> 
