--- a/app/views/involvements/_form.html.erb
+++ b/app/views/involvements/_form.html.erb
@@ -1,12 +1,14 @@
 <%= semantic_form_for @involvement do |f| %>
   <%= f.inputs do %>
-    <%= f.input :teaching_module %>
-    <%= f.input :user %>
+    <%= f.input :teaching_module, label: 'Module' %>
+    <%= f.input :user, label: 'Personne' %>
     <%= f.input :description %>
     <p>Toutes les heures sont en heures étudiants</p>
-    <%= f.input :hours_cm %>
-    <%= f.input :hours_td %>
-    <%= f.input :hours_tp %>
+    <%= f.input :hours_cm, label: 'Heures de cours magistraux (CM)' %>
+    <%= f.input :hours_td, label: 'Heures de travaux dirigés (TD)' %>
+    <%= f.input :multiplier_td, label: 'Groupes concernés par les heures de TD' %>
+    <%= f.input :hours_tp, label: 'Heures de travaux pratiques (TP)' %>
+    <%= f.input :multiplier_tp, label: 'Groupes concernés par les heures de TP' %>
   <% end %>
   <%= f.actions %>
 <% end %>
