--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
             <li><%= link_to 'Projets', projects_path %></li>
             <li><%= link_to 'Equipe', users_path %></li>
             <li><%= link_to 'Maquette', summary_path %></li>
+            <li><%= link_to 'Services', users_summary_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PPN <span class="caret"></span></a>
               <ul class="dropdown-menu">
