--- a/app/views/involvements/_table.html.erb
+++ b/app/views/involvements/_table.html.erb
@@ -2,6 +2,7 @@
   <thead>
     <tr>
       <th>Personne</th>
+      <th>Semestre</th>
       <th>Code module</th>
       <th>Nom module</th>
       <th>Heures étudiant total</th>
@@ -17,6 +18,7 @@
   <% involvements.each do |involvement| %>
     <tr>
       <td><%= link_to involvement.user, involvement.user %></td>
+      <td><%= link_to involvement.teaching_module.semester, involvement.teaching_module.semester %></td>
       <td><%= link_to involvement.teaching_module, involvement.teaching_module %></td>
       <td><%= link_to involvement.teaching_module.label, involvement.teaching_module %></td>
       <td><%= involvement.student_hours %></td>
