--- a/app/views/involvements/_table.html.erb
+++ b/app/views/involvements/_table.html.erb
@@ -26,7 +26,7 @@
       <td><%= involvement.hours_td %></td>
       <td><%= involvement.hours_tp %></td>
       <td><%= involvement.teacher_hours %></td>
-      <td><%= involvement.description %></td>
+      <td><%= simple_format involvement.description %></td>
       <td><%= link_to 'Edit', edit_involvement_path(involvement), class: 'btn btn-primary btn-xs' %></td>
     </tr>
   <% end %>
